<resources>
    <string name="app_name">toy_me_message</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_me_message">me_message</string>
    <string name="Button1">一手经销</string>
    <string name="Button2">二手好物</string>
    <string name="Button3">论坛</string>
    <string name="result">论坛的详细内容</string>
    <string name="item1">快来围观啊</string>
    <string name="item2">分享好玩具了</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tiezi1">今天和大家分享一下信价比较高的玩具城\n第一：Hamleys玩具城\n\t\t中国首家世界最大玩具城坐落南京市。这个百年玩具品牌去年10月正式落户中国南京，迎来自己的全新征程，用全球化发展战略的眼光和耀眼的愿景，引世人瞩目。这座高达四层，总面积近7000平方米的玩具王国将是国内单体面积最大的玩具店，也是全球最大“场景互动式”玩具店。 </string>
    <string name="tiezi2">第二：皇家迪智尼玩具\n\t\t引入欧美四大领域玩具，德国微工坊、陶瓷搭建、3D打印笔等八大类玩具等你来玩哦</string>
    <string name="tiezi3">今天和大家分享一下性价比较高的玩具城\n第一：Hamleys玩具城\n\t\t中国首家世界最大玩具城坐落南京市。这个百年玩具品牌已正式落户中国南京，迎来自己的全新征程，用全球化发展战略的眼光和耀眼的愿景，引世人瞩目。这座高达四层，总面积近7000平方米的玩具王国将是国内单位面积最大的玩具店，也是全球最大"场景互动式"玩具店。</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="yhname">玩具女孩\n2018年11月28日</string>
    <string name="tiezizuozheming">玩具女孩</string>
    <string name="tiezishijian">2018年11月28日</string>
    <string name="tiezibiaoti">盘点南京最受欢迎的玩具城</string>
    <string name="fbxx">发布信息</string>
    <string name="tzbt">为帖子拟一个标题吧...</string>
    <string name="wztx">随手说出你此刻的心声...</string>
    <string name="fbpp">发布</string>
    <string name="qxfb">取消</string>
    <string name="zero">0</string>
    <string name="guanzhu">关注</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_luntan2">luntan2</string>
    <string name="title_activity_firsthand">firsthand</string>



    <string name="title_activity_sell">sell</string>
    <string name="title_activity_secondhand">secondhand</string>
    <string name="title_activity_sell11">sell11</string>
    <string name="title_activity_fsell1">fsell1</string>
    <string name="title_activity_fsell">fsell</string>
    <string name="title_activity_firsthandsell">firsthandsell</string>
    <string name="title_activity_firsthandsell1">firsthandsell1</string>
    <string name="title_activity_firsthandsell2">firsthandsell2</string>
    <string name="title_activity_firsthandsell3">firsthandsell3</string>
    <string name="title_activity_firsthandsell4">firsthandsell4</string>
    <string name="title_activity_firsthandsell5">firsthandsell5</string>
    <string name="title_activity_firsthandsell6">firsthandsell6</string>
    <string name="title_activity_firsthandsell7">firsthandsell7</string>
    <string name="title_activity_firsthandsell8">firsthandsell8</string>
    <string name="title_activity_firsthandbuy">firsthandbuy</string>
    <string name="title_activity_firsthandbuy1">firsthandbuy1</string>
    <string name="title_activity_secondhandsell">secondhandsell</string>
    <string name="title_activity_secondhandsell1">secondhandsell1</string>
    <string name="title_activity_secondhandsell2">secondhandsell2</string>
    <string name="title_activity_secondhandsell3">secondhandsell3</string>
    <string name="title_activity_secondhandsell4">secondhandsell4</string>
    <string name="title_activity_secondhandsell5">secondhandsell5</string>
    <string name="title_activity_secondhandsell6">secondhandsell6</string>
    <string name="title_activity_secondhandsell7">secondhandsell7</string>
    <string name="title_activity_secondhandsell8">secondhandsell8</string>
</resources>
