<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tiezi2Activity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5pt">

                <Button
                    android:id="@+id/guanzhubutton"
                    android:layout_width="57dp"
                    android:layout_height="35dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:text="@string/guanzhu" />

                <LinearLayout

                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7pt"
                    android:layout_marginLeft="7pt"
                    android:layout_marginTop="5pt"
                    android:layout_marginBottom="5pt"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_teacher_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tiezibiaoti"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#367EAA"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:id="@+id/tiezhuxinxi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp">

                        <ImageView
                            android:id="@+id/tiezhutouxiang"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/bptx" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tiezizuozheming" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tiezishijian" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tiezi1"
                android:textSize="50px"
                android:textColor="#020202" />

            <!--<ImageView-->
                <!--android:id="@+id/imageView6"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="100dp"-->
                <!--android:src="@drawable/hamleys" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView11"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginEnd="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:text="@string/tiezi2"-->
                <!--android:textColor="#020202" />-->

            <!--<ImageView-->
                <!--android:id="@+id/imageView7"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/hjdzn"-->
                <!--/>-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/tiezidianzan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="0dp"
                android:background="#c0c0c0"
                android:layout_alignParentBottom="true"
                >

                <ImageView
                    android:id="@+id/zan_img"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:src="@drawable/bheart"
                    />

                <TextView
                    android:id="@+id/zan_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"/>

                <ImageView
                    android:id="@+id/shoucan_img"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:src="@drawable/bstar"
                    />

                <TextView
                    android:id="@+id/shoucan_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    />
            </LinearLayout>
            </RelativeLayout>
        </LinearLayout>


</android.support.constraint.ConstraintLayout>